--- a/Coded Correspondence/coded_correspondence.ipynb
+++ b/Coded Correspondence/coded_correspondence.ipynb
@@ -23,7 +23,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hey there! this is an example of a caesar cipher. were you able to decode it? i hope so! send me a message back with the same offset!'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import string module to use alphabets and punctuations\n",
     "import string\n",
@@ -37,6 +48,7 @@
     "\n",
     "# decoding message function\n",
     "def decoder(message, offset):\n",
+    "    message = message.lower()\n",
     "    \n",
     "    # decoded message\n",
     "    decoded = ''\n",
@@ -96,6 +108,7 @@
    "source": [
     "# coding message function\n",
     "def coder(message, offset):\n",
+    "    message = message.lower()\n",
     "    \n",
     "    coded = ''\n",
     "    \n",
@@ -177,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +199,7 @@
        "'performing multiple caesar ciphers to code your messages is even more secure!'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -391,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +413,7 @@
        "'you were able to decode this? nice work! you are becoming quite the expert at crytography!'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,6 +421,9 @@
    "source": [
     "# Vigenère decoder function\n",
     "def vigenere_decoder(message, keyword):\n",
+    "    message = message.lower()\n",
+    "    \n",
+    "    ### Creating Keyword Message\n",
     "    \n",
     "    # the keyword message to be formed\n",
     "    keyword_message = ''\n",
@@ -422,40 +438,51 @@
     "        if key_idx > len(keyword) - 1:\n",
     "            key_idx -= len(keyword)\n",
     "        \n",
-    "        # if the current letter in message \n",
+    "        # if the current letter in message is a punctuation or space then just add it and skip rest code\n",
     "        if message[i] == ' ' or message[i] in punctuations:\n",
     "            keyword_message += message[i]\n",
     "            continue\n",
     "        \n",
+    "        # If it's a alphabet then add the respective letter in keyword to keyword message\n",
     "        keyword_message += keyword[key_idx]\n",
     "        \n",
+    "        # incrementing keyword index counter\n",
     "        key_idx += 1\n",
     "    \n",
+    "    \n",
+    "    ### Decoding Message Using Keyword Message\n",
+    "    \n",
+    "    # decoded message string\n",
     "    decoded = ''\n",
     "    \n",
+    "    # looping through num in range of length of message\n",
     "    for idx in range(len(message)):\n",
     "        \n",
+    "        # if the current letter in message is a punctuation or space then just add it and skip rest code\n",
     "        if message[idx] == ' ' or message[idx] in punctuations:\n",
     "            decoded += message[idx]\n",
     "            continue\n",
     "        \n",
-    "        letter = message[idx]\n",
-    "        \n",
+    "        # Finding the current letter in message using idx and then finding it's index in alphabets\n",
+    "        letter = message[idx] \n",
     "        letter_idx = alphabets.index(letter)\n",
     "        \n",
+    "        # Finding the current letter in keyword message using idx and then finding it's index in alphabets\n",
     "        current_keyword = keyword_message[idx]\n",
-    "        \n",
     "        current_keyword_idx = alphabets.index(current_keyword)\n",
     "        \n",
+    "        # Calculating the index of actual letter\n",
     "        new_idx =  letter_idx - current_keyword_idx\n",
     "        \n",
+    "        # if the index found was less than 0 then reset it accordingly\n",
     "        if new_idx < 0:\n",
     "            new_idx += len(alphabets)\n",
-    "            \n",
+    "        \n",
+    "        # adding the letter found to decoded message\n",
     "        decoded += alphabets[new_idx]\n",
     "    \n",
+    "    # returning decoded message\n",
     "    return decoded\n",
-    "\n",
     "\n",
     "message6 = 'dfc aruw fsti gr vjtwhr wznj? vmph otis! cbx swv jipreneo uhllj kpi rahjib eg fjdkwkedhmp!'\n",
     "\n",
@@ -476,10 +503,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i have learnt vigenere and caeser cipher algorithms by myself. great!'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vigenère coder function\n",
+    "def vigenere_coder(message, keyword):\n",
+    "    message = message.lower()\n",
+    "    \n",
+    "    ### Creating Keyword Message\n",
+    "    \n",
+    "    # the keyword message to be formed\n",
+    "    keyword_message = ''\n",
+    "    \n",
+    "    # having idx counter to index the keyword passed\n",
+    "    key_idx = 0\n",
+    "    \n",
+    "    # looping through num in range of length of message\n",
+    "    for i in range(len(message)):\n",
+    "        \n",
+    "        # if we incremented the key index more than its length so reset it to avoid index error\n",
+    "        if key_idx > len(keyword) - 1:\n",
+    "            key_idx -= len(keyword)\n",
+    "        \n",
+    "        # if the current letter in message is a punctuation or space then just add it and skip rest code\n",
+    "        if message[i] == ' ' or message[i] in punctuations:\n",
+    "            keyword_message += message[i]\n",
+    "            continue\n",
+    "        \n",
+    "        # If it's a alphabet then add the respective letter in keyword to keyword message\n",
+    "        keyword_message += keyword[key_idx]\n",
+    "        \n",
+    "        # incrementing keyword index counter\n",
+    "        key_idx += 1\n",
+    "    \n",
+    "    \n",
+    "    ### Coding Message Using Keyword Message\n",
+    "    \n",
+    "    # coded message string\n",
+    "    coded = ''\n",
+    "    \n",
+    "    # looping through num in range of length of message\n",
+    "    for idx in range(len(message)):\n",
+    "        \n",
+    "        # if the current letter in message is a punctuation or space then just add it and skip rest code\n",
+    "        if (message[idx] == ' ') or (message[idx] in punctuations):\n",
+    "            coded += message[idx]\n",
+    "            continue\n",
+    "        \n",
+    "        # Finding the current letter in message using idx and then finding it's index in alphabets\n",
+    "        letter = message[idx]\n",
+    "        letter_idx = alphabets.index(letter)\n",
+    "        \n",
+    "        # Finding the current letter in keyword message using idx and then finding it's index in alphabets\n",
+    "        current_keyword = keyword_message[idx]\n",
+    "        current_keyword_idx = alphabets.index(current_keyword)\n",
+    "        \n",
+    "        # Calculating the index of coded letter\n",
+    "        new_idx =  letter_idx + current_keyword_idx\n",
+    "        \n",
+    "        # if the index found was more than 26 then reset it accordingly\n",
+    "        if new_idx > 25:\n",
+    "            new_idx -= len(alphabets)\n",
+    "        \n",
+    "        # adding the letter found to coded message\n",
+    "        coded += alphabets[new_idx]\n",
+    "    \n",
+    "    # returning coded message\n",
+    "    return coded\n",
+    "\n",
+    "\n",
+    "message7 = 'i have learnt vigenere and caeser cipher algorithms by myself. great!'\n",
+    "\n",
+    "vigenere_decoder(vigenere_coder(message7, 'friends'), 'friends')"
+   ]
   },
   {
    "cell_type": "markdown",
